--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
-    "vue": "^3.5.18"
+    "@primeuix/themes": "^1.2.3",
+    "@tailwindcss/vite": "^4.1.12",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.3.7",
+    "tailwindcss": "^4.1.12",
+    "vue": "^3.5.18",
+    "vue-router": "^4.5.1",
+    "vuex": "^4.0.2",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.31.0",
     "@vitejs/plugin-vue": "^6.0.1",
-    "eslint": "^9.31.0",
-    "eslint-plugin-vue": "~10.3.0",
     "globals": "^16.3.0",
     "vite": "^7.0.6",
     "vite-plugin-vue-devtools": "^8.0.0"
